api-docs/4.2/ManagedResource.md

<h1 id="nps-api-managedresource">ManagedResource</h1>

[Search for managed resources (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/Search.md)

[Search for resources that are not under management (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/CandidateSearch.md)

[Add multiple resources by hostid (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/CandidateAddMultiple.md)

[Test platform setting is valid for operating system (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/TestPlatformAsync.md)

[Remove multiple managed resources (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/CandidateRemoveMultiple.md)

[Search for resource users (Auth policies: MfaRequired, MfaRequired; roles: Admin,App)](ManagedResource/UserSearch.md)

[Get list of active directory domains (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetDomainNamesAsync.md)

[Get all managed resources (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetAllManagedResources.md)

[Create managed resource (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/Post.md)

[Get specific managed resource (Auth policies: MfaRequired)](ManagedResource/GetManagedResourceById.md)

[Update managed resource (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/PutAsync.md)

[Remove managed resource (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/DeleteAsync.md)

[Gets a resource with its protected groups (Auth policies: MfaRequired; roles: App)](ManagedResource/GetResourceWithProtectedGroupsAsync.md)

[Get managed resource by host id (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetManagedResourceByHostId.md)

[Get managed resource by hostscan host id (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetManagedResourceByHostScanHostId.md)

[Get list of resource names that are <cref name="ManagedResourceType">Host</cref> (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/ResourceNamesWithHostAsync.md)

[Get managed resource for activity directory domain config (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetManagedResourceByDomainConfigId.md)

[IsTaskEnabled check appsettings.json for the property (bool) and returns the value (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/IsTaskEnabled.md)

[Set service account for batch of resources (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/SetServiceAccountBatchAsync.md)

[Set platform for batch of resources (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/SetPlatformBatchAsync.md)

[Remove batch of managed resources (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/DeleteIdsAsync.md)

[Get resource groups that resource is a member of (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetGroups.md)

[Retrieves the built-in account for the Managed Resource, if one exists for its platform, or a null value if the platform does not support it. (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetBuiltInAdmin.md)

[Return DataTable of managed resources in group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/ResourcesInGroup.md)

[Return protected groups for given resource (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetProtectedGroupsAsync.md)

[Get specific protected group for managed resource (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetProtectedGroupAsync.md)

[Remove protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/DeleteProtectedGroup.md)

[Create protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/PostProtectedGroup.md)

[Get list of members for protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetallowedMembers.md)

[Get the current members of a protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetCurrentMembers.md)

[Get specific member of a protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetGroupMember.md)

[Remove member from protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/DeleteGroupMember.md)

[Add member to protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/PostGroupMember.md)

[Update member of protected group (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/PutGroupMember.md)

[Set the manage account setting for the list of given resources (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/SetManageAccount.md)

[Trust the discovered certificate of type for the managed resource (Auth policies: MfaRequired; roles: Admin)](ManagedResource/TrustAsync.md)

[Set thumbprint of the expected certificate for resource (Auth policies: MfaRequired; roles: App)](ManagedResource/CertThumbprintAsync.md)

[Test the connection to the resource (Auth policies: MfaRequired; roles: Admin)](ManagedResource/TestConnectionAsync.md)

[Records the resource test step results to the database (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/SetTestConnectionStepAsync.md)

[Get the resource test status (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/GetTestResourceStatusAsync.md)

[Initialize the resource test status with the list of steps to perform (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/InitializeTestStepsAsync.md)

[Mark the resource test as running (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/SetResourceTestAsRunningAsync.md)

[Mark the resource test as complete (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/CompleteResourceTestAsync.md)

[Configure WinRM to use Https on target resource (Auth policies: MfaRequired; roles: Admin)](ManagedResource/ConfigureWinRmHttpsAsync.md)

[Set the expected WinRmHttpsThumbprint (Auth policies: MfaRequired; roles: App)](ManagedResource/SetWinRmHttpsThumbPrint.md)

[Test WinRM connectivity (Auth policies: MfaRequired; roles: Admin,App)](ManagedResource/TestWinRmAsync.md)

